--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,7 @@
 .violet-gradient {
   background: #804dee;
   background: linear-gradient(-90deg, #804dee 0%, rgba(60, 51, 80, 0) 100%);
+
   background: -webkit-linear-gradient(
     -90deg,
     #804dee 0%,
@@ -63,6 +64,13 @@
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+.save-earth {
+  background: linear-gradient(
+    114.3deg,
+    rgb(19, 126, 57) 0.2%,
+    rgb(8, 65, 91) 68.5%
+  );
 }
 
 .green-text-gradient {
